[project]
name = "wavefit-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate==0.34.2",
    "antlr4-python3-runtime==4.9.3",
    "audioread==3.0.1",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "decorator==5.1.1",
    "filelock==3.16.1",
    "fsspec==2024.9.0",
    "huggingface-hub==0.25.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "lazy-loader==0.4",
    "librosa==0.10.2.post1",
    "llvmlite==0.43.0",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "networkx==3.2.1",
    "numba==0.60.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "packaging==24.1",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "psutil==6.0.0",
    "pycparser==2.22",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    "soundfile==0.12.1",
    "soxr==0.5.0.post1",
    "sympy==1.13.3",
    "threadpoolctl==3.5.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
]
